feat: delete failed course generations
